fixed scrollbar in <select> options list

--- a/bitrix/templates/general/styles/src/form.less
+++ b/bitrix/templates/general/styles/src/form.less
@@ -223,6 +223,7 @@
 							border: 0; margin: 0; padding: 0;
 							height: 0;
 							.transitionQ('height 200ms');
+							overflow: hidden !important;
 
 							& > li {
 								border: 0; margin: 0; padding: 0;
